# talks

browser-use-milvus/: basic_agent_chrome.py  chat_app.py  pyproject.toml  requirements.txt  scraper.py
browser-use-milvus/templates/: index.html
devoxx_be/: devcontainer.json  openai_langchain.java  pom.xml
devoxx_be/src/main/java/_1_easy/: Easy_RAG_Example.java
devoxx_be/src/main/java/_2_naive/: Naive_RAG_Example.java
devoxx_be/src/main/java/_3_advanced/: LocalLangGraphRAGAgent.java  _01_Advanced_RAG_with_Query_Compression_Example.java  _02_Advanced_RAG_with_Query_Routing_Example.java  _03_Advanced_RAG_with_ReRanking_Example.java  _04_Advanced_RAG_with_Metadata_Example.java  _05_Advanced_RAG_with_Metadata_Filtering_Examples.java  _06_Advanced_RAG_Skip_Retrieval_Example.java  _07_Advanced_RAG_Multiple_Retrievers_Example.java  _08_Advanced_RAG_Web_Search_Example.java  _08_Advanced_RAG_Web_Search_Example_Milvus.java  _09_Advanced_RAG_Return_Sources_Example.java  _10_Advanced_RAG_SQL_Database_Retreiver_Example.java
devoxx_be/src/main/java/_4_low_level/: _01_Low_Level_Naive_RAG_Example.java
devoxx_be/src/main/java/shared/: Utils.java
ollama_examples/: function_calling.ipynb
quix_milvus/: RAG_Streaming_demo.ipynb  README.md  consumer.py  docker-compose.yml  open_deep_research_baseline.ipynb  producer.py  pyproject.toml  requirements.txt  simple_rag_langchain.py  streaming_rag_langchain.py
search_at_scale/: Berlin_meetup_July_17th.ipynb  OSS_EU.ipynb  README.md  data.py  pyproject.toml  upload_data_in_S3.py
search_at_scale/milvus_gpu/: docker-compose.yml  pyproject.toml
vllms/: README.md  multi_modal_rag_with_pixtral.ipynb  multimodal_blogpost_rag.py  multimodal_rag_with_pixtral_vllm.ipynb  multimodal_video_rag.py  pyproject.toml
