[tool.poetry]
name = "search-at-scale"
version = "0.1.0"
description = ""
authors = ["stephen37 <stephen.batifol@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.2.3"
datasets = "^2.20.0"
s3fs = "^2024.6.1"
pymilvus = "^2.4.5"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
